Se agrega funcionalidad de agregar imagens al producto

--- a/VentaDeProductos/Views/Producto/Create.cshtml
+++ b/VentaDeProductos/Views/Producto/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NombreProducto" class="control-label"></label>
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SubCategoriaId" class="control-label"></label>
-                <select asp-for="SubCategoriaId" class ="form-control" asp-items="ViewBag.SubCategoriaId"></select>
+                <select asp-for="SubCategoriaId" class="form-control" asp-items="ViewBag.SubCategoriaId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Precio" class="control-label"></label>
@@ -36,10 +36,15 @@
                 <input asp-for="Descuento" class="form-control" />
                 <span asp-validation-for="Descuento" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="ImagenPortada" class="control-label"></label>
-                <input type="file" accept="image/*,.pdf" asp-for="ImagenPortada" class="form-control" />
+                <input type="file" accept="image/*,.pdf" asp-for="ImagenPortada" class="form-control"/>
                 <span asp-validation-for="ImagenPortada" class="text-danger"></span>
+            </div>*@
+            <div class="form-group">
+               <label for="Img">Elija la Imagen de Portada</label>
+                <input type="file" multiple="multiple" id="Img" name="Imagenes" class="form-control" />
+                <span class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
