--- a/VentaDeProductos/Views/Producto/Index.cshtml
+++ b/VentaDeProductos/Views/Producto/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.Descuento)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImagenPortada)
+                @Html.DisplayNameFor(model => model.Imagenes)
             </th>
             <th></th>
         </tr>
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Descuento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImagenPortada)
+                @Html.DisplayFor(modelItem => item.Imagenes)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
