--- a/VentaDeProductos/Views/Producto/Delete.cshtml
+++ b/VentaDeProductos/Views/Producto/Delete.cshtml
@@ -42,10 +42,10 @@
             @Html.DisplayFor(model => model.Descuento)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImagenPortada)
+            @Html.DisplayNameFor(model => model.Imagenes)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImagenPortada)
+            @Html.DisplayFor(model => model.Imagenes)
         </dd>
     </dl>
     
