--- a/VentaDeProductos/Views/Producto/Edit.cshtml
+++ b/VentaDeProductos/Views/Producto/Edit.cshtml
@@ -39,9 +39,9 @@
                 <span asp-validation-for="Descuento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImagenPortada" class="control-label"></label>
-                <input asp-for="ImagenPortada" class="form-control" />
-                <span asp-validation-for="ImagenPortada" class="text-danger"></span>
+                <label asp-for="Imagenes" class="control-label"></label>
+                <input asp-for="Imagenes" class="form-control" />
+                <span asp-validation-for="Imagenes" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
