Precarga de datos usando modelBuilder en DbContext

--- a/VentaDeProductos/Views/Home/Index.cshtml
+++ b/VentaDeProductos/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenido a Tienda Inglesa</h1>
+    <h1 class="display-4">Bienvenido a Tienda</h1>
     <p>Nuestros Productos</p>
 </div>
 
