--- a/VentaDeProductos/wwwroot/css/site.css
+++ b/VentaDeProductos/wwwroot/css/site.css
@@ -33,6 +33,7 @@ body {
 
 .producto-card:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
 }
 
 .producto-info{
@@ -47,7 +48,8 @@ body {
 
 .producto-card img {
     width: 100%;
-    object-fit:cover;
+    max-height: 200px;
+    object-fit:contain;
     
 }
 
