--- a/VentaDeProductos/Views/Shared/_Layout.cshtml
+++ b/VentaDeProductos/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+var categorias = ViewBag.Categorias as ICollection<Categoria>;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,6 +29,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @*<li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toogle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Menu
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarMenu">
+                                @foreach( var c in categorias) {
+                                <li><a class="dropdown-item">@c.Nombre</a></li>
+                                }
+                            </ul>
+                        </li>*@
                     </ul>
                 </div>
             </div>
