--- a/VentaDeProductos/Views/Shared/Components/Menu/Default.cshtml
+++ b/VentaDeProductos/Views/Shared/Components/Menu/Default.cshtml
@@ -1,12 +1,35 @@
-﻿@model IEnumerable<Categoria>
+﻿@model List<Categoria>
 
 
-<li class="nav-item dropdown">
-        <a href="#" class="nav-link dropdown-toogle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Menu
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarMenu">
-            @foreach( var c in Model) {
-            <li><a class="dropdown-item">@c.Nombre</a></li>
-            }
-        </ul>
+<li id="menu" class="nav-item dropdown">
+    <a href="#" class="nav-link dropdown-toogle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Menu</a>
+
+    <ul id="nav" class="dropdown-menu" aria-labelledby="navbarMenu">
+        @foreach (var c in Model)
+        {
+            <li>
+                <a href="@Url.Action(c.Nombre,"Categoria")" class="dropdown-item">@c.Nombre</a>
+
+                @if (c.SubCategorias != null)
+                {
+
+                    <ul class="dropdown-menu" aria-labelledby="navbarMenu">
+
+
+                        @foreach (var sub in c.SubCategorias)
+                        {
+                            <li>
+
+                                <a href="#" class="dropdown-item">@sub.Nombre</a>
+                            </li>
+                        }
+                    </ul>
+                }
+
+
+            </li>
+
+
+        }
+    </ul>
 </li>
