--- a/VentaDeProductos/wwwroot/css/site.css
+++ b/VentaDeProductos/wwwroot/css/site.css
@@ -29,18 +29,20 @@ body {
 
 .producto-card {
     flex: 0 1 24%;
-    max-width: 300px;
-    margin: auto;
+    width: 300px;
+    height: 400px;
+    margin: 10px 0px 0px 0px;
     border: solid;
     border-color: lightgrey;
     border-width: 1px;
     border-radius: 5px;
     cursor: pointer;
+    position: relative;
+    transition: all 0.3s ease-in-out;
 }
 
 .producto-card:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease-in-out;
 }
 
 .producto-info{
@@ -73,6 +75,8 @@ body {
     text-align: center;
     width: 100%;
     font-size: 18px;
+    position:absolute;
+    bottom:0px;
 }
 
 
@@ -86,4 +90,65 @@ body {
 
 #nav li:hover ul{
     display:block;
+}
+
+#detalles-img {
+    float: left;
+    max-height: 300px;
+    margin-top: 100px;
+}
+
+#detalles img {
+    height: 500px;
+    width: 500px;
+    object-fit: contain;
+}
+
+#detalles-info {
+    width: 400px;
+    height: 400px;
+    float: right;
+    margin-top: 100px;
+    margin-right: 100px;
+    background-color: #f0f0f0;
+    padding: 10px;
+    position: relative;
+}
+
+#pre-img {
+    margin-top:10px;
+}
+
+#pre-img img {
+    max-height:50px;
+    width:50px;
+    object-fit:contain;
+    border: solid;
+    border-color: lightgrey;
+    border-width: 1px;
+    border-radius: 5px;
+}
+
+#detalles-info div {
+    display:flex;
+    position:center;
+    justify-content:center;
+    align-items:center;
+}
+
+#detalles button {
+    position:absolute;
+    width:90%;
+    font-size: 22px;
+    border: none;
+    padding: 12px;
+    color: white;
+    background-color: blueviolet;
+    transition: 0.3s ease-in-out;
+    position:absolute;
+    bottom:10px;
+}
+
+#detalles button:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
