--- a/VentaDeProductos/wwwroot/css/site.css
+++ b/VentaDeProductos/wwwroot/css/site.css
@@ -153,7 +153,7 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-#searchBar {
+#txtSearch {
     position: absolute;
     top: 10px;
     display: block;
@@ -164,6 +164,6 @@ body {
     border-bottom-right-radius: 28px;
     border-bottom-left-radius: 28px;
     height: 40px;
-    width:500px;
-    margin-left:500px;
+    width: 500px;
+    margin-left: 500px;
 }
