--- a/VentaDeProductos/wwwroot/css/site.css
+++ b/VentaDeProductos/wwwroot/css/site.css
@@ -153,7 +153,7 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-#txtSearch {
+/*#txtSearch {
     position: absolute;
     top: 10px;
     display: block;
@@ -166,4 +166,4 @@ body {
     height: 40px;
     width: 500px;
     margin-left: 500px;
-}
+}*/
