Se logra la busqueda de productos y se le da estilos al navbar

--- a/VentaDeProductos/Views/Home/Index.cshtml
+++ b/VentaDeProductos/Views/Home/Index.cshtml
@@ -26,10 +26,10 @@
                 </div>
                 <div class="producto-info">
                     <h1>@p.NombreProducto</h1>
-                    <span>@p.Precio</span>
+                    <span>$@p.Precio</span>
                 </div>
             </a>
-            <button>Add to cart</button>
+            <button>Agregar al Carrito</button>
         </div>
 
     }
