--- a/VentaDeProductos/Views/Shared/Components/Menu/Default.cshtml
+++ b/VentaDeProductos/Views/Shared/Components/Menu/Default.cshtml
@@ -2,7 +2,9 @@
 
 
 <li id="menu" class="nav-item dropdown">
-    <a href="#" class="nav-link dropdown-toogle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Menu</a>
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Menu
+    </a>
 
     <ul id="nav" class="dropdown-menu" aria-labelledby="navbarMenu">
         @foreach (var c in Model)
