--- a/VentaDeProductos/wwwroot/css/site.css
+++ b/VentaDeProductos/wwwroot/css/site.css
@@ -30,7 +30,7 @@ body {
 .producto-card {
     flex: 0 1 24%;
     width: 300px;
-    height: 400px;
+    height: 350px;
     margin: 10px 0px 0px 0px;
     border: solid;
     border-color: lightgrey;
@@ -38,7 +38,7 @@ body {
     border-radius: 5px;
     cursor: pointer;
     position: relative;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;;
 }
 
 .producto-card:hover {
@@ -51,7 +51,12 @@ body {
 
 .producto-info span {
     color: grey;
-    font-size: 22px
+    font-size: 18px;
+    margin-bottom:0px;
+}
+
+.producto-info h1{
+    font-size:larger;
 }
 
 .producto-card img {
@@ -153,17 +158,10 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-/*#txtSearch {
-    position: absolute;
-    top: 10px;
-    display: block;
-    background-color: #f8f8f8;
-    border-style: none;
-    border-top-left-radius: 28px;
-    border-top-right-radius: 28px;
-    border-bottom-right-radius: 28px;
-    border-bottom-left-radius: 28px;
-    height: 40px;
-    width: 500px;
-    margin-left: 500px;
-}*/
+nav {
+    font-size:larger;
+}
+
+.ui-autocomplete {
+    z-index: 9999999 !important;
+}
