--- a/VentaDeProductos/Views/Shared/_Layout.cshtml
+++ b/VentaDeProductos/Views/Shared/_Layout.cshtml
@@ -15,14 +15,14 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom box-shadow mb-3 py-3">
             <div class="container-fluid col-8">
-                <a class="navbar-brand text-nowrap" href="#">Tienda</a>
+                <a class="navbar-brand text-nowrap" asp-controller="Home" asp-action="Index">Tienda</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contacto</a>
@@ -48,7 +48,7 @@
                             <a class="nav-link mx-2 text-uppercase" href="#"><i class="bi bi-cart"></i> Carrito</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-2 text-uppercase" href="#"><i class="bi bi-person-circle"></i> Cuenta</a>
+                            <a class="nav-link mx-2 text-uppercase" asp-controller="Auth" asp-action="Register"><i class="bi bi-person-circle"></i> Ingresar</a>
                         </li>
                         </ul>
                 </div>
