--- a/VentaDeProductos/wwwroot/css/site.css
+++ b/VentaDeProductos/wwwroot/css/site.css
@@ -18,24 +18,26 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: lightgrey;
 }
 
-.cards{
+/*.cards{
     display:flex;
     flex-wrap:wrap;
     justify-content:space-between;
 }
-
+*/
 .producto-card {
+    background-color:white;
     flex: 0 1 24%;
     width: 300px;
-    height: 350px;
+    height: 400px;
     margin: 10px 0px 0px 0px;
     border: solid;
     border-color: lightgrey;
     border-width: 1px;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
     position: relative;
     transition: all 0.3s ease-in-out;;
@@ -47,6 +49,8 @@ body {
 
 .producto-info{
     text-align:center;
+    height:25%;
+    padding-top:15px;
 }
 
 .producto-info span {
@@ -61,9 +65,11 @@ body {
 
 .producto-card img {
     width: 100%;
-    max-height: 200px;
+    height:250px;
+    max-height: 250px;
     object-fit:contain;
-    
+    border-bottom:solid 1px lightgray;
+    padding-bottom:5px;
 }
 
 .producto-card a, a:hover, a:focus, a:active {
@@ -74,14 +80,16 @@ body {
 .producto-card button {
     border: none;
     outline: 0;
-    padding: 12px;
     color: white;
-    background-color: cornflowerblue;
+    background-color: blueviolet;
     text-align: center;
-    width: 100%;
+    width: 160px;
     font-size: 18px;
     position:absolute;
-    bottom:0px;
+    justify-content:center;
+    bottom:15px;
+    border-radius:15px;
+    padding: 8px;
 }
 
 
@@ -97,27 +105,33 @@ body {
     display:block;
 }
 
-#detalles-img {
-    float: left;
-    max-height: 300px;
-    margin-top: 100px;
+#detalles {
+    height:800px;
 }
 
-#detalles img {
-    height: 500px;
-    width: 500px;
+#detalles-img {
+    width: 50%;
+    height: 400px;
+    float: left;
+    padding-top: 50px;
+}
+
+#detalles-img img {
+    width: 100%;
+    height:400px;
     object-fit: contain;
 }
 
 #detalles-info {
-    width: 400px;
+    border:solid 1px lightgray;
+    border-radius:10px;
+    width: 50%;
     height: 400px;
     float: right;
-    margin-top: 100px;
-    margin-right: 100px;
-    background-color: #f0f0f0;
+    background-color: white;
     padding: 10px;
     position: relative;
+    margin-top:50px;
 }
 
 #pre-img {
@@ -151,7 +165,8 @@ body {
     background-color: blueviolet;
     transition: 0.3s ease-in-out;
     position:absolute;
-    bottom:10px;
+    bottom:20px;
+    border-radius:10px;
 }
 
 #detalles button:hover {
